@@ -130,6 +130,7 @@
 				8723EDEC04EAADBB0073D10E,
 				E8EDCE69015E0A5703000001,
 				FBBB8B60039FC04E01F955DB,
+				DD9C1AE2051F45C000A8A065,
 				FB094A14033D58AE01F955DB,
 				FB094A16033D58B601F955DB,
 				FB754C5F036EFC5301F955DB,
@@ -1234,6 +1235,7 @@
 				870EAAB704325A880073D10E,
 				870BCD85047070AC0073D10E,
 				8723EDEE04EAADBB0073D10E,
+				DD9C1AE3051F45C000A8A065,
 			);
 			isa = PBXResourcesBuildPhase;
 			runOnlyForDeploymentPostprocessing = 0;
@@ -1642,6 +1644,18 @@
 		};
 		DD8CF2EE03CDD34C00A8A065 = {
 			fileRef = DD8CF2DD03CDD34B00A8A065;
+			isa = PBXBuildFile;
+			settings = {
+			};
+		};
+		DD9C1AE2051F45C000A8A065 = {
+			isa = PBXFileReference;
+			name = "iTerm-Aqua.jpg";
+			path = "images/iTerm-Aqua.jpg";
+			refType = 4;
+		};
+		DD9C1AE3051F45C000A8A065 = {
+			fileRef = DD9C1AE2051F45C000A8A065;
 			isa = PBXBuildFile;
 			settings = {
 			};
